[gd_scene load_steps=48 format=3 uid="uid://bggcv7yipjcm7"]

[ext_resource type="Script" path="res://systems/dungeon_events/loot_event.gd" id="1_dmmsx"]
[ext_resource type="PackedScene" uid="uid://dxphpuocbhbrg" path="res://systems/card_combat/cards/select_card.tscn" id="1_panx4"]
[ext_resource type="Script" path="res://systems/card_combat/card_foldout.gd" id="1_wtojk"]
[ext_resource type="AudioStream" uid="uid://cjkm5388mov46" path="res://assets/sounds/card_hover.ogg" id="5_dpvki"]
[ext_resource type="Resource" uid="uid://3t5jry37we2f" path="res://data/cards/the_chariot.tres" id="7_3menk"]
[ext_resource type="Resource" uid="uid://biih8ndy7cwuu" path="res://data/cards/death.tres" id="9_5boo4"]
[ext_resource type="Resource" uid="uid://d388ib31p5qsn" path="res://data/cards/the_emperor.tres" id="9_mciwm"]
[ext_resource type="Resource" uid="uid://clbklsr1u3gn5" path="res://data/cards/page_of_daggers.tres" id="10_byhqk"]
[ext_resource type="Resource" uid="uid://5p8a1flrgkh" path="res://data/cards/the_empress.tres" id="10_jbfgc"]
[ext_resource type="Resource" uid="uid://dcn0mphx2qg0v" path="res://data/cards/page_of_herbs.tres" id="11_rt6qa"]
[ext_resource type="Resource" uid="uid://cdyp516wjxron" path="res://data/cards/page_of_thorns.tres" id="12_5h8ov"]
[ext_resource type="Resource" uid="uid://b5ytokrx5why5" path="res://data/cards/page_of_flags.tres" id="13_i20vq"]
[ext_resource type="Resource" uid="uid://wx2v5wr88lof" path="res://data/cards/the_hierophant.tres" id="14_n23su"]
[ext_resource type="Resource" uid="uid://c4j8576fmlh7q" path="res://data/cards/the_hermit.tres" id="14_yblq6"]
[ext_resource type="Resource" uid="uid://bdbn32r8x8g4v" path="res://data/cards/the_high_priestess.tres" id="15_5fchr"]
[ext_resource type="Texture2D" uid="uid://dk8yqb3in1e4g" path="res://assets/sprites/cards/card_back.png" id="15_lvfx4"]
[ext_resource type="Resource" uid="uid://bitn4lw4darn4" path="res://data/cards/the_moon.tres" id="15_pfa0e"]
[ext_resource type="Resource" uid="uid://cyiqtt8grlnlq" path="res://data/cards/the_lovers.tres" id="16_mhl86"]
[ext_resource type="Resource" uid="uid://ccymn0mj5bdvy" path="res://data/cards/the_sun.tres" id="16_qho8o"]
[ext_resource type="PackedScene" uid="uid://d04yhti50qih4" path="res://assets/vfx/big_blob.tscn" id="16_tts5u"]
[ext_resource type="Resource" uid="uid://lvxtgh2yl8" path="res://data/cards/strength.tres" id="17_0fg6u"]
[ext_resource type="Resource" uid="uid://c0p160e6m2l0t" path="res://data/cards/the_magician.tres" id="17_37lf3"]
[ext_resource type="Resource" uid="uid://b4tc66w5jk5ii" path="res://data/cards/the_star.tres" id="18_avl72"]
[ext_resource type="Resource" uid="uid://cjas1prwh50gk" path="res://data/cards/the_hanged_man.tres" id="19_cdqgj"]
[ext_resource type="Resource" uid="uid://q3wogyvkudaf" path="res://data/cards/king_of_flags.tres" id="21_mpwgk"]
[ext_resource type="Resource" uid="uid://csr1pvebvy0ae" path="res://data/cards/king_of_herbs.tres" id="22_eqva3"]
[ext_resource type="Resource" uid="uid://nr5du58leen5" path="res://data/cards/king_of_thorns.tres" id="23_gsrsm"]
[ext_resource type="Resource" uid="uid://d4guw6tm3pttg" path="res://data/cards/king_of_daggers.tres" id="24_pevg5"]
[ext_resource type="Theme" uid="uid://d12enup0x00h8" path="res://assets/ui/fonts/placeholder_theme.tres" id="26_pregp"]
[ext_resource type="Resource" uid="uid://cyu186axhjfax" path="res://data/cards/justice.tres" id="28_bgh43"]
[ext_resource type="Resource" uid="uid://dpspidmqwqebx" path="res://data/cards/the_world.tres" id="30_subjn"]
[ext_resource type="Resource" uid="uid://bjlneh5al3d8x" path="res://data/cards/queen_of_daggers.tres" id="31_l3eet"]
[ext_resource type="Resource" uid="uid://d2b7yscmtse2l" path="res://data/cards/queen_of_herbs.tres" id="33_odtm4"]
[ext_resource type="Resource" uid="uid://ciai4bipoidj6" path="res://data/cards/queen_of_thorns.tres" id="34_1d4eq"]
[ext_resource type="Resource" uid="uid://s2luhru0dtce" path="res://data/cards/knight_of_daggers.tres" id="35_8nhqe"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oroll"]
bg_color = Color(0.0823529, 0.0823529, 0.0823529, 0.87451)

[sub_resource type="LabelSettings" id="LabelSettings_wl2yu"]
font_size = 151

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ld1hp"]
bg_color = Color(0.2, 0.176471, 0.243137, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f7o83"]
bg_color = Color(0.588235, 0.560784, 0.729412, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_56bhs"]
bg_color = Color(0.545098, 0.388235, 0.658824, 1)

[sub_resource type="LabelSettings" id="LabelSettings_wbjb7"]
font_size = 100

[sub_resource type="Animation" id="Animation_l3jsp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/VisualDeck:anchor_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/VisualDeck:anchor_bottom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/Control/Cards:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer/Control/Label:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CanvasLayer/BigBlob:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CanvasLayer/skip_reward:offset_top")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [-512]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CanvasLayer/skip_reward:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_6dd7k"]
resource_name = "hide_deck"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/VisualDeck:anchor_bottom")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2, 0.5, 1.2),
"transitions": PackedFloat32Array(2, -1.51572, 1),
"update": 0,
"values": [1.0, 0.9, 1.5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/VisualDeck:anchor_top")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 0.5, 1.2),
"transitions": PackedFloat32Array(2, -1.51572, 1),
"update": 0,
"values": [1.0, 0.9, 1.5]
}

[sub_resource type="Animation" id="Animation_2pevy"]
resource_name = "show_deck"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/VisualDeck:anchor_top")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.5, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/VisualDeck:anchor_bottom")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.5, 1.0]
}

[sub_resource type="Animation" id="Animation_hj0im"]
resource_name = "show_reward"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/skip_reward:offset_top")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-512.0, 128.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/skip_reward:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_l4dsk"]
resource_name = "skipped"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Control/Cards:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/Control/SkipButton:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/Control/Label:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer/BigBlob:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tre13"]
_data = {
"RESET": SubResource("Animation_l3jsp"),
"hide_deck": SubResource("Animation_6dd7k"),
"show_deck": SubResource("Animation_2pevy"),
"show_reward": SubResource("Animation_hj0im"),
"skipped": SubResource("Animation_l4dsk")
}

[node name="LootEvent" type="Node"]
script = ExtResource("1_dmmsx")
possibleCards = Array[Resource("res://data/scripts/card_data.gd")]([ExtResource("17_37lf3"), ExtResource("15_5fchr"), ExtResource("10_jbfgc"), ExtResource("9_mciwm"), ExtResource("14_n23su"), ExtResource("16_mhl86"), ExtResource("7_3menk"), ExtResource("9_5boo4"), ExtResource("10_byhqk"), ExtResource("11_rt6qa"), ExtResource("12_5h8ov"), ExtResource("13_i20vq"), ExtResource("14_yblq6"), ExtResource("15_pfa0e"), ExtResource("16_qho8o"), ExtResource("17_0fg6u"), ExtResource("18_avl72"), ExtResource("19_cdqgj"), ExtResource("21_mpwgk"), ExtResource("22_eqva3"), ExtResource("23_gsrsm"), ExtResource("24_pevg5"), ExtResource("28_bgh43"), ExtResource("30_subjn"), ExtResource("31_l3eet"), ExtResource("33_odtm4"), ExtResource("34_1d4eq"), ExtResource("35_8nhqe")])
cardTemplate = ExtResource("1_panx4")
min_coins = 3
max_coins = 5

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Panel" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(960, 540)
theme = ExtResource("26_pregp")
theme_override_styles/panel = SubResource("StyleBoxFlat_oroll")

[node name="Cards" type="Control" parent="CanvasLayer/Control"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wtojk")
card_spacing = 30.0
card_hidden_height = 0
card_arc = 0.0

[node name="Label" type="Label" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -392.0
offset_right = 392.0
offset_bottom = 210.0
grow_horizontal = 2
text = "Pick a card"
label_settings = SubResource("LabelSettings_wl2yu")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ConfirmButton" type="Button" parent="CanvasLayer/Control"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -91.0
offset_top = -137.0
offset_right = 91.0
offset_bottom = -72.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 41
theme_override_styles/normal = SubResource("StyleBoxFlat_ld1hp")
theme_override_styles/hover = SubResource("StyleBoxFlat_f7o83")
theme_override_styles/pressed = SubResource("StyleBoxFlat_56bhs")
text = "confirm"

[node name="SkipButton" type="Button" parent="CanvasLayer/Control"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 164.0
offset_top = -137.0
offset_right = 346.0
offset_bottom = -72.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 41
theme_override_styles/normal = SubResource("StyleBoxFlat_ld1hp")
theme_override_styles/hover = SubResource("StyleBoxFlat_f7o83")
theme_override_styles/pressed = SubResource("StyleBoxFlat_56bhs")
text = "Skip"

[node name="VisualDeck" type="TextureRect" parent="CanvasLayer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(210, 330)
anchors_preset = -1
anchor_left = 1.0
anchor_top = 1.5
anchor_right = 1.0
anchor_bottom = 1.5
offset_right = -64.0
offset_bottom = -64.0
grow_horizontal = 0
grow_vertical = 0
pivot_offset = Vector2(105, 165)
texture = ExtResource("15_lvfx4")
expand_mode = 1

[node name="BigBlob" parent="CanvasLayer" instance=ExtResource("16_tts5u")]
visible = false
self_modulate = Color(1, 1, 1, 1)
position = Vector2(1714, 1191)
worse_digit = 1
best_digit = 10
good_modulate = Color(0.92549, 0.811765, 0.223529, 1)
bad_modulate = Color(0.627451, 0.592157, 0.423529, 1)

[node name="skip_reward" type="Label" parent="CanvasLayer"]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_top = -512.0
grow_horizontal = 2
text = "You gained 100 coins instead!"
label_settings = SubResource("LabelSettings_wbjb7")
horizontal_alignment = 1
vertical_alignment = 1

[node name="big_blob_target" type="Control" parent="CanvasLayer/skip_reward"]
layout_mode = 1
anchor_left = 0.455603
anchor_top = 0.50365
anchor_right = 0.455603
anchor_bottom = 0.50365
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_dpvki")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_tre13")
}
autoplay = "RESET"

[connection signal="pressed" from="CanvasLayer/Control/ConfirmButton" to="." method="_on_confirm_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/SkipButton" to="." method="_on_skip_button_pressed"]
